--- a/settings.gradle
+++ b/settings.gradle
@@ -15,5 +15,7 @@ project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 //loadGoogleSampleModule()
 //loadKotlinModule()
 //loadGithubLib()
-loadToolAppModule()
-loadMvpModule()
+//loadToolAppModule()
+//loadMvpModule()
+
+loadImoocModule()
