--- a/ImoocModules/ImoocDataBinding/build.gradle
+++ b/ImoocModules/ImoocDataBinding/build.gradle
@@ -23,10 +23,6 @@ android {
 
         vectorDrawables.useSupportLibrary = true
 
-        renderscriptTargetApi 21
-        renderscriptSupportModeEnabled true    // Enable RS support
-//        multiDexEnabled true
-
         ndk {
             //设置支持的SO库架构
             abiFilters 'armeabi', 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
@@ -54,11 +50,6 @@ android {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 
-    dexOptions {
-//        jumboMode true
-        javaMaxHeapSize "4g"
-    }
-
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
@@ -73,13 +64,12 @@ dependencies {
     implementation rootProject.ext.support.constraint_layout
     implementation rootProject.ext.support.design
     implementation rootProject.ext.support.cardview
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation rootProject.ext.support.junit
     androidTestImplementation rootProject.ext.support.test_runner
     androidTestImplementation(rootProject.ext.support.espresso_core, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
-    implementation rootProject.ext.ext_tools.multidex
 
     /*butternife*/
     implementation rootProject.ext.ext_tools.butterknife
@@ -103,18 +93,3 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport:latest.release'
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
 }
-
-//解决支持库版本不兼容问题
-configurations.all {
-    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-        def requested = details.requested
-        if (requested.group == 'com.android.support') {
-            if (!requested.name.startsWith("multidex")) {
-                //  不要设置太高，26以上的版本会出现问题
-                details.useVersion '25.3.0'
-            }
-        }
-    }
-}
-
-
