Data Binding demo练习

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,7 +15,7 @@ project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 //loadGoogleSampleModule()
 //loadKotlinModule()
 //loadGithubLib()
-//loadToolAppModule()
+loadToolAppModule()
 //loadMvpModule()
 
 loadImoocModule()
