--- a/ImoocModules/ImoocDataBinding/src/main/AndroidManifest.xml
+++ b/ImoocModules/ImoocDataBinding/src/main/AndroidManifest.xml
@@ -1,28 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.idb"
-    >
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        package="com.example.idb"
+        >
 
     <application
-        android:name="com.zysdk.vulture.clib.corel.BaseApp"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
-        <activity android:name=".MainActivity">
+            android:name="com.zysdk.vulture.clib.corel.BaseApp"
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme"
+            >
+        <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SampleActivity"/>
-        <activity android:name=".ListSampleActivity"/>
-        <activity android:name=".ExpressionSampleActivity">
+        <activity android:name=".ui.activity.SampleActivity"/>
+        <activity android:name=".ui.activity.ListSampleActivity"/>
+        <activity android:name=".ui.activity.ExpressionSampleActivity">
+        </activity>
+        <activity android:name=".ui.activity.TwowayActivity">
+        </activity>
+        <activity android:name=".ui.activity.LambdaActivity">
         </activity>
     </application>
 
