--- a/AppModules/WxRecordSample/build.gradle
+++ b/AppModules/WxRecordSample/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.example.zhaoshuang.weixinrecordeddemo"
         minSdkVersion 17
@@ -29,7 +29,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
+    implementation 'com.android.support:appcompat-v7:23.2.1'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:recyclerview-v7:23.2.1'
 }
