--- a/ImoocModules/ImoocDataBinding/src/main/AndroidManifest.xml
+++ b/ImoocModules/ImoocDataBinding/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         </activity>
         <activity android:name=".ui.activity.LambdaActivity">
         </activity>
+        <activity android:name=".ui.activity.AnimationTestActivity">
+        </activity>
     </application>
 
 </manifest>
