ComicBook欢迎页功能实现

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 
 
 //loadLibs()
-loadAppModule()
+//loadAppModule()
 //loadComponentLenarnModule()
 //loadDatasturectureModule()
 //loadDesignpatternModule()
@@ -16,8 +16,7 @@ loadAppModule()
 //loadGoogleSampleModule()
 //loadKotlinModule()
 //loadGithubLib()
-loadToolAppModule()
-//loadMvpModule()
+//loadToolAppModule()
+loadMvpModule()
 //loadNdkAppModule()
-
 //loadImoocModule()
