--- a/builds/settingconfig.gradle
+++ b/builds/settingconfig.gradle
@@ -166,9 +166,9 @@ private void loadMvpModules() {
     project(":MvpModules").projectDir = file
 //    include ':MvpModules:WanAndroid'
 //    include ':MvpModules:DaggerWanAndroid'
-    include ':MvpModules:Bailan'
+//    include ':MvpModules:Bailan'
 //    include ':MvpModules:Musicoco'
-//    include ':MvpModules:ExpressComicBook'
+    include ':MvpModules:ExpressComicBook'
 //    include ':MvpModules:DailyNews'
 //    include ':MvpModules:VideoWorld'
 }
