--- a/MvpModules/ExpressComicBook/build.gradle
+++ b/MvpModules/ExpressComicBook/build.gradle
@@ -79,6 +79,8 @@ dependencies {
 
     implementation rootProject.ext.ext_tools.rxjava
     implementation rootProject.ext.ext_tools.rxandroid
+    implementation rootProject.ext.ext_tools.rxlifecycle_components
+
     implementation rootProject.ext.ext_tools.retrofit
     implementation rootProject.ext.ext_tools.converter_gson
     implementation rootProject.ext.ext_tools.adapter_rxjava2
@@ -90,6 +92,7 @@ dependencies {
     annotationProcessor rootProject.ext.ext_tools.butterknife_compiler
 
     implementation rootProject.ext.ext_tools.utilcode
+    implementation rootProject.ext.ext_tools.jsoup
 
     implementation rootProject.ext.ext_tools.systembartint
     implementation rootProject.ext.ext_tools.barlibrary
@@ -99,6 +102,8 @@ dependencies {
 
     implementation rootProject.ext.ext_tools.glide
     annotationProcessor rootProject.ext.ext_tools.glide_compiler
+
+    implementation rootProject.ext.ext_tools.BaseRecyclerViewAdapter
 
     implementation project(':ZySdkLib')
 
