--- a/MvpModules/ExpressComicBook/src/main/AndroidManifest.xml
+++ b/MvpModules/ExpressComicBook/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
         package="com.example.comicbook"
         >
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
             android:name=".ComicBookApp"
             android:allowBackup="true"
