rxjava 示例工程添加

--- a/RxJava2X/src/main/AndroidManifest.xml
+++ b/RxJava2X/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             >
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -21,12 +21,12 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".Sample01Activity"
+                android:name=".activity.Sample01Activity"
                 android:label="@string/title_activity_sample01"
                 android:theme="@style/AppTheme.NoActionBar"
                 >
         </activity>
-        <activity android:name=".Sample02Activity">
+        <activity android:name=".activity.Sample02Activity">
         </activity>
     </application>
 
