--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 apply from: getRootDir().getAbsolutePath() + "/builds/settingconfig.gradle"
-//include ':ZySdkLib', ':ImoocProguard', ':SampleSvg'
-include ':ZySdkLib', ':RxJava2X'
+//include ':ZySdkLib', ':ImoocProguard', ':SampleSvg', ':RxJava2X'
+include ':ZySdkLib'
 project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 
 //loadLibs()
@@ -17,6 +17,6 @@ project(':ZySdkLib').projectDir = new File('../ZYSdk/SDKLibrary')
 //loadKotlinModule()
 //loadGithubLib()
 //loadToolAppModule()
-//loadMvpModule()
+loadMvpModule()
 //loadNdkAppModule()
 //loadImoocModule()
