--- a/ext.gradle
+++ b/ext.gradle
@@ -127,7 +127,7 @@ project.ext {
 
             picasso                             : 'com.squareup.picasso:picasso:2.71828',
 
-            androidsvg                             :  'com.caverock:androidsvg:1.2.1',
+            androidsvg                          : 'com.caverock:androidsvg:1.2.1',
 
             /*PhotoView*/
             PhotoView                           : 'com.github.chrisbanes:PhotoView:1.3.0',
@@ -186,7 +186,8 @@ project.ext {
             otto                                : 'com.squareup:otto:1.3.8',
 
             //greendao
-            greendao                            : 'de.greenrobot:greendao:2.1.0',
+            greendao                            : 'org.greenrobot:greendao:3.2.2',
+            greendao_generator                  : 'org.greenrobot:greendao-generator:3.2.2',
 
             jsbridge                            : 'com.github.lzyzsd:jsbridge:1.0.4',
             expandabletextview                  : 'cn.carbs.android:ExpandableTextView:1.0.3',
